// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextLink /> should allow as override 1`] = `
<p
  class="anchor"
>
  <span
    class="root sizeScale4 strong root strong"
  >
    Test
  </span>
</p>
`;

exports[`<TextLink /> should match the snapshot 1`] = `
<a
  class="anchor"
  rel="noopener noreferrer"
>
  <span
    class="root sizeScale4 strong root strong"
  />
</a>
`;
